# graphics-course

./: CMakeLists.txt
.github/workflows/: comment-lint-results.yaml  format.yaml  lint.yaml  linux.yaml  windows.yaml
cmake/: thirdparty.cmake
common/: CMakeLists.txt
common/render_utils/: CMakeLists.txt  RandomGenerator.hpp  Timer.cpp  Timer.hpp  Utilities.cpp  Utilities.hpp
common/render_utils/shaders/: quad.frag  quad.vert  terrain_utils.glsl  unpack_attributes.glsl  unpack_attributes_baked.glsl
common/resource/: Material.hpp  ResourceManager.hpp  Texture2D.hpp
common/scene/: CMakeLists.txt  SceneManager.cpp  SceneManager.hpp
resources/scenes/Avocado/: Avocado_baked.gltf
resources/scenes/lovely_town/: scene.gltf  scene_baked.gltf
resources/scenes/low_poly_dark_town/: scene_baked.gltf
samples/shadowmap/: App.cpp  Renderer.cpp  WorldRenderer.cpp
samples/simple_compute/: simple_compute.cpp
tasks/: CMakeLists.txt
tasks/aa/renderer/: GBuffer.cpp  GBuffer.hpp  Renderer.hpp  WorldRenderer.cpp
tasks/aa/renderer/modules/Antialiasing/: AntialiasingModule.cpp  AntialiasingModule.hpp  CMakeLists.txt
tasks/aa/renderer/modules/Particles/: CMakeLists.txt
tasks/bindless/: CMakeLists.txt
tasks/bindless/renderer/: CMakeLists.txt  GBuffer.cpp  GBuffer.hpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/csm/baker/: Baker.cpp  main.cpp  mikktspace.c  mikktspace.h
tasks/csm/renderer/: App.cpp  GBuffer.cpp  GBuffer.hpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/csm/renderer/modules/Light/: CMakeLists.txt  Light.h  LightModule.cpp  LightModule.hpp  ShadowCastingDirectionalLight.cpp  ShadowCastingDirectionalLight.hpp
tasks/csm/renderer/modules/Light/shaders/: displace_lights.comp
tasks/csm/renderer/modules/TerrainGenerator/: CMakeLists.txt  TerrainGeneratorModule.cpp  TerrainGeneratorModule.hpp
tasks/csm/renderer/modules/TerrainGenerator/shaders/: TerrainGenerationParams.h  generator.comp
tasks/csm/renderer/modules/TerrainRender/: CMakeLists.txt  TerrainRenderModule.cpp  TerrainRenderModule.hpp
tasks/csm/renderer/modules/TerrainRender/shaders/: chunk_shadow.vert  process_chunk.tese  process_chunk_shadow.tese  subdivide_chunk.tesc  subdivide_chunk_shadow.tesc  terrain.frag
tasks/csm/renderer/modules/WaterRender/: CMakeLists.txt  WaterRenderModule.cpp  WaterRenderModule.hpp
tasks/csm/renderer/modules/WaterRender/shaders/: WaterParams.h  WaterRenderParams.h  water.frag
tasks/deferred/: CMakeLists.txt
tasks/deferred/renderer/: App.cpp  CMakeLists.txt  GBuffer.cpp  GBuffer.hpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/deferred/renderer/shaders/: Light.h  decoy.vert  shading.frag
tasks/deferred/renderer/shaders/meshes/: static_mesh.frag  static_mesh.vert
tasks/deferred/renderer/shaders/terrain/: TerrainGenerationParams.h  UniformParams.h  calculate_normal.comp  chunk.vert  displace_lights.comp  generator.frag  process_chunk.tese  terrain.frag
tasks/imgui/renderer/: App.cpp  (+5 more)
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: UniformParams.h  main_shader.frag  materials.glsl  sdf.glsl  sdf_objects.glsl  texture_gen.frag  utils.glsl
tasks/local_shadertoy1/: App.cpp  App.hpp
tasks/local_shadertoy2/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy2/shaders/: main_shader.frag
tasks/particles/renderer/modules/ShadowMapping/: CMakeLists.txt
tasks/tonemapping/renderer/: CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/tonemapping/renderer/shaders/: decoy.vert  subdivide_chunk.tesc
tasks/tonemapping/renderer/shaders/postprocessing/: UniformHistogramInfo.h  calculate_min_max.comp  histogram.comp  postprocess.comp  postprocess.frag  process_histogram.comp
tasks/water/baker/: Baker.hpp  CMakeLists.txt
tasks/water/renderer/: App.cpp  App.hpp  CMakeLists.txt  FramePacket.hpp  GBuffer.cpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/water/renderer/modules/: CMakeLists.txt  RenderPacket.hpp
tasks/water/renderer/modules/Light/: CMakeLists.txt  Light.h  LightModule.cpp  LightModule.hpp
tasks/water/renderer/modules/Light/shaders/: LightParams.h  displace_lights.comp
tasks/water/renderer/modules/StaticMeshes/: CMakeLists.txt  MeshesRenderModule.cpp  MeshesRenderModule.hpp
tasks/water/renderer/modules/StaticMeshes/shaders/: culling.comp
tasks/water/renderer/modules/StaticMeshesRender/: CMakeLists.txt  MeshesRenderModule.cpp  MeshesRenderModule.hpp
tasks/water/renderer/modules/StaticMeshesRender/shaders/: static_mesh.frag
tasks/water/renderer/modules/TerrainGenerator/: CMakeLists.txt  TerrainGeneratorModule.cpp  TerrainGeneratorModule.hpp
tasks/water/renderer/modules/TerrainGenerator/shaders/: calculate_normal.comp  decoy.vert
tasks/water/renderer/modules/TerrainRender/: CMakeLists.txt  TerrainRenderModule.cpp  TerrainRenderModule.hpp
tasks/water/renderer/modules/TerrainRender/shaders/: TerrainParams.h  chunk.vert  process_chunk.tese  subdivide_chunk.tesc
tasks/water/renderer/modules/Tonemapping/: CMakeLists.txt  TonemappingModule.cpp  TonemappingModule.hpp
tasks/water/renderer/modules/WaterGenerator/: CMakeLists.txt  WaterGeneratorModule.cpp  WaterGeneratorModule.hpp
tasks/water/renderer/modules/WaterGenerator/shaders/: DisplaySpectrumParams.h  GeneralSpectrumParams.h  SpectrumGenerationParams.h  SpectrumUpdateParams.h  assemble.comp  complex.glsl  generate_initial_spectrum.comp  generate_spectrum.comp  horizontal_inverse_fft.comp  inverse_fft.comp  precompute_twiddle_factors.comp  update_spectrum_for_fft.comp  vertical_inverse_fft.comp
tasks/water/renderer/modules/WaterRender/: CMakeLists.txt  WaterRenderModule.cpp  WaterRenderModule.hpp
tasks/water/renderer/modules/WaterRender/shaders/: WaterParams.h  WaterRenderParams.h  process_chunk.tese  subdivide_chunk.tesc  water.frag
tasks/water/renderer/shaders/: UniformParams.h  shading.frag
tasks/water/renderer/shaders/postprocessing/: calculate_min_max.comp
tasks/water/renderer/shaders/terrain/: process_chunk.tese
(+138 files in other folders)
